--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="margin:0;">
+<html style="margin:0;overflow:hidden;">
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>Online Store - Boy Scout Troop 370</title>
